--- a/app/src/main/res/layout/fragment_blank_fragment_1.xml
+++ b/app/src/main/res/layout/fragment_blank_fragment_1.xml
@@ -1,13 +1,9 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/content_frame_layout1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="csg.HelloAndroid.Layout1">
+    tools:context="csg.HelloAndroid.BlankFragment_1">
 
     <EditText android:id="@+id/edit_message"
         android:layout_width="fill_parent"
@@ -18,6 +14,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/edit_message"
-        android:text="@string/my_button_text"/>
+        android:text="@string/my_button_text"
+        android:layout_gravity="right|top" />
 
 </RelativeLayout>
