--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -6,6 +6,11 @@
     android:layout_height="fill_parent"
     style="@style/AppTheme"
     >
+    <RelativeLayout
+        android:id="@+id/main_activity_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+    </RelativeLayout>
 
     <!-- The navigation drawer -->
     <android.support.v7.widget.RecyclerView
