--- a/app/src/main/res/layout/fragment_blank_fragment_1.xml
+++ b/app/src/main/res/layout/fragment_blank_fragment_1.xml
@@ -5,26 +5,34 @@
     android:layout_height="match_parent"
     tools:context="csg.HelloAndroid.BlankFragment_1">
 
-    <EditText android:id="@+id/edit_message"
+    <TextView android:id="@+id/file_name"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:hint="@string/edit_message"
-        android:autoText="false"
-        android:inputType="numberDecimal" />
+        android:layout_height="wrap_content" />
 
     <Button android:id="@+id/my_button"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/edit_message"
-        android:text="@string/my_button_text"
+        android:layout_below="@+id/file_name"
+        android:text="@string/StartRecording"
         android:layout_gravity="right|top" />
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="New Text"
         android:id="@+id/lxTextView"
         android:layout_below="@+id/my_button"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:textAlignment="center" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="New Text"
+        android:id="@+id/acclTextView"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/lxTextView"
+        android:layout_alignParentEnd="true"
+        android:textAlignment="center" />
 
 </RelativeLayout>
