--- a/app/src/main/res/layout/fragment_blank_fragment_1.xml
+++ b/app/src/main/res/layout/fragment_blank_fragment_1.xml
@@ -5,10 +5,6 @@
     android:layout_height="match_parent"
     tools:context="csg.HelloAndroid.BlankFragment_1">
 
-    <TextView android:id="@+id/file_name"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content" />
-
     <Button android:id="@+id/my_button"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
@@ -20,19 +16,19 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="New Text"
-        android:id="@+id/lxTextView"
+        android:id="@+id/acclTextView"
+        android:layout_alignParentStart="true"
         android:layout_below="@+id/my_button"
-        android:layout_centerHorizontal="true"
+        android:layout_alignParentEnd="true"
         android:textAlignment="center" />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="New Text"
-        android:id="@+id/acclTextView"
+        android:id="@+id/gyroTextView"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/lxTextView"
+        android:layout_below="@+id/acclTextView"
         android:layout_alignParentEnd="true"
         android:textAlignment="center" />
-
 </RelativeLayout>
